{try{const
[STDERR] [eval]:1
const m=require('mysql2/promise');(async()= d=await m.createPool({host:'localhost',user:'root',password:'123456',database:'medboard'});const[r]=await d.execute('SELECT id,status FROM admissions WHERE status=?',['waiting_discharge']);console.log('RESULT:',JSON.stringify(r));await d.end();}catch(e){console.log('ERR:',e.message)}})()
                                                    ^
Invalid assignment target

SyntaxError: Unexpected identifier 'm'
    at makeContextifyScript (node:internal/vm:194:14)
    at compileScript (node:internal/process/execution:388:10)
    at evalTypeScript (node:internal/process/execution:260:22)
    at node:internal/main/eval_string:71:3

Node.js v24.13.0

[EXIT CODE: 1]
